INCLUDE(PackageMacros)

PACKAGE(TrilinosFramework)

ASSERT_DEFINED(${PACKAGE_NAME}_ENABLE_TESTS)
IF (${PACKAGE_NAME}_ENABLE_TESTS)

  ADD_SUBDIRECTORY(DependencyUnitTests)

  ADD_SUBDIRECTORY(TestingUnitTests)

  ASSERT_DEFINED(CMAKE_HOST_SYSTEM_NAME)
  IF (NOT CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
    ADD_SUBDIRECTORY(CTestScriptsUnitTests)
  ENDIF()

  ADD_SUBDIRECTORY(python)

ENDIF()

PACKAGE_POSTPROCESS()
