INCLUDE(PackageMacros)

PACKAGE(TrilinosFramework)

ASSERT_DEFINED(${PACKAGE_NAME}_ENABLE_TESTS)
IF (${PACKAGE_NAME}_ENABLE_TESTS)

  ADD_SUBDIRECTORY(python)

  ADD_SUBDIRECTORY(package_arch)

  ADD_SUBDIRECTORY(DependencyUnitTests)

  ASSERT_DEFINED(CMAKE_HOST_SYSTEM_NAME)
  IF (NOT CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
    ADD_SUBDIRECTORY(CTestScriptsUnitTests)
    ADD_SUBDIRECTORY(ctest/UnitTests)
  ENDIF()


ENDIF()

PACKAGE_POSTPROCESS()
