INCLUDE(TribitsPackageMacros)

TRIBITS_PACKAGE(TrilinosFramework)

ASSERT_DEFINED(${PACKAGE_NAME}_ENABLE_TESTS)
IF (${PACKAGE_NAME}_ENABLE_TESTS)

  ADD_SUBDIRECTORY(tribits/python)

  ADD_SUBDIRECTORY(tribits/package_arch)

  ASSERT_DEFINED(CMAKE_HOST_SYSTEM_NAME)
  IF (NOT CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
    ADD_SUBDIRECTORY(tribits/ctest/UnitTests)
  ENDIF()

ENDIF()

TRIBITS_PACKAGE_POSTPROCESS()
