
INCLUDE(PackageAddAdvancedTest)


IF (PYTHON_EXECUTABLE)

  PACKAGE_ADD_ADVANCED_TEST( GeneralScriptSupport_UnitTests
    OVERALL_WORKING_DIRECTORY TEST_NAME
    TEST_0 CMND ${PYTHON_EXECUTABLE} 
      ARGS ${CMAKE_CURRENT_SOURCE_DIR}/GeneralScriptSupport_UnitTests.py -v
      PASS_REGULAR_EXPRESSION "OK"
    )

  PACKAGE_ADD_ADVANCED_TEST( TrilinosPackageFilePathUtils_UnitTests
    OVERALL_WORKING_DIRECTORY TEST_NAME
    TEST_0 CMND ${PYTHON_EXECUTABLE} 
      ARGS ${CMAKE_CURRENT_SOURCE_DIR}/TrilinosPackageFilePathUtils_UnitTests.py -v
      PASS_REGULAR_EXPRESSION "OK"
    )

  PACKAGE_ADD_ADVANCED_TEST( CheckinTest_UnitTests
    OVERALL_WORKING_DIRECTORY TEST_NAME
    TEST_0 CMND ${PYTHON_EXECUTABLE} 
      ARGS ${CMAKE_CURRENT_SOURCE_DIR}/CheckinTest_UnitTests.py -v
      PASS_REGULAR_EXPRESSION "OK"
    )

  ADD_SUBDIRECTORY(UnitTests)

ENDIF()
