TRIBITS_PACKAGE(TriBITS)

ASSERT_DEFINED(${PACKAGE_NAME}_ENABLE_TESTS)
IF (${PACKAGE_NAME}_ENABLE_TESTS)

  ADD_SUBDIRECTORY(python)

  ADD_SUBDIRECTORY(package_arch)

  ASSERT_DEFINED(CMAKE_HOST_SYSTEM_NAME)
  IF (NOT CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
    ADD_SUBDIRECTORY(ctest/UnitTests)
  ENDIF()

ENDIF()

TRIBITS_PACKAGE_POSTPROCESS()
